trunk/OldArchive/de54d6bd7b219431f8056866f3351d1f-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:10:5: error: static assertion failed: s has three code units
     static_assert(size(s) == 3, "s has three code units");
     ^
